<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    /*

    android:layout_gravity="center" --> centraliza o layout na tela
    android:gravity="center" --> centraliza os componentes do layout dentro dele

    */

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ImcActivity">

        <TextView
            style="@style/TextViewForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imc_desc" />

        <EditText
            android:id="@+id/edit_imc_peso"
            style="@style/EditTextForm"
            android:hint="@string/peso" />

        <EditText
            android:id="@+id/edit_imc_altura"
            style="@style/EditTextForm"
            android:hint="@string/altura" />

        <Button
            android:id="@+id/btn_enviar"
            style="@style/ButtonForm"
            android:text="@string/calcular" />
    </LinearLayout>

</ScrollView>

